--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel administratora</title>
+    <title>Admin</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h1>Panel administratora</h1>
+    <h1>Admin</h1>
     <a href="/logout">Wyloguj się</a>
 
     <h2>Dodaj nowy produkt</h2>
