--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <h1>Witamy w sklepie!</h1>
-    <a href="/login">Zaloguj się</a> | <a href="/register">Rejestracja</a>
+    <body>
+        <div style="text-align: center;">
+            <img src="/images/starting-page.jpg" alt="obraz startowy" style="max-width: 100%; height: auto;">
+        </div>
+        <div style="text-align: center;">
+        <a href="/login" style="font-size: 20px; font-family: Arial, sans-serif; font-weight: bold; text-decoration: none; color: #333;">LOGOWANIE</a> | 
+        <a href="/register" style="font-size: 20px; font-family: Arial, sans-serif; font-weight: bold; text-decoration: none; color: #333;">REJESTRACJA</a>
+        </div>
     
     <h2>Produkty:</h2>
     <ul>
