--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,23 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Szafcia Rafcia</title>
-    <link rel="stylesheet" href="/styles.css">
+    
+    <style>
+        body{
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: #333;
+        }
+
+        img{
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
+
+        a{
+            font-size: 20px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #333;
+            margin: 0 10px;
+            transition: 0.2s ease-in-out;
+        }
+
+        a:hover{
+            transform: scale(1.2);
+            color: #be53fc;
+        }
+
+    </style>
 </head>
 <body>
-    <body>
-        <div style="text-align: center;">
-            <img src="/images/starting-page.jpg" alt="obraz startowy" style="max-width: 100%; height: auto;">
-        </div>
-        <div style="text-align: center;">
-        <a href="/login" style="font-size: 20px; font-family: Arial, sans-serif; font-weight: bold; text-decoration: none; color: #333;">LOGOWANIE</a> | 
-        <a href="/register" style="font-size: 20px; font-family: Arial, sans-serif; font-weight: bold; text-decoration: none; color: #333;">REJESTRACJA</a>
-        </div>
-    
-    <h2>Produkty:</h2>
+
+    <div>
+        <img src="/images/starting-page.jpg" alt="obraz startowy">
+    </div>
+
+    <div>
+        <a href="/login">LOGOWANIE</a> | 
+        <a href="/register">REJESTRACJA</a>
+    </div>
+
+    <h2>PRODUKTY</h2>
     <ul>
         <% products.forEach(product => { %>
             <li><%= product.name %> - <%= product.price %> PLN</li>
         <% }); %>
     </ul>
+
 </body>
 </html>
