--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,14 +14,11 @@
     <% } %>
 
     <form action="/login" method="POST">
-        <label for="username">Nazwa użytkownika:</label>
-        <input type="text" id="username" name="username" required>
-
-        <label for="password">Hasło:</label>
-        <input type="password" id="password" name="password" required>
-
-        <button type="submit">Zaloguj się</button>
+        <input type="email" name="email" required>
+        <input type="password" name="password" required>
+        <button type="submit">Zaloguj</button>
     </form>
+    
 
     <p>Nie masz konta? <a href="/register">Zarejestruj się</a></p>
 </body>
