--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,8 +14,8 @@
     <% } %>
 
     <form action="/register" method="POST">
-        <label for="username">Nazwa użytkownika:</label>
-        <input type="text" id="username" name="username" required>
+        <label for="email">Nazwa użytkownika:</label>
+        <input type="email" id="email" name="email" required>
 
         <label for="password">Hasło:</label>
         <input type="password" id="password" name="password" required>
