--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -92,7 +92,7 @@
         <% } %>
         
 
-        <a href="/user" class="button">Back to main site</a>
+        <a href="/user" class="button">Powroot</a>
     </div>
 </body>
 </html>
