--- a/views/register.ejs
+++ b/views/register.ejs
@@ -83,6 +83,7 @@
         <input type="password" name="password" required>
         <button type="submit">Zarejestruj się</button>
     </form>
+    <p>Jesteś już kotem mechanicznym? <a href="/login">Zaloguj się</a></p>
     </div>
 </body>
 </html>
