--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -35,10 +35,10 @@
     <h2>Lista użytkowników</h2>
     <ul>
         <% users.forEach(user => { %>
-            <li><%= user.username %></li>
+            <li><%= user.email %></li>
         <% }); %>
     </ul>
-
+    
     <h2>Zamówienia</h2>
     <ul>
         <% carts.forEach(order => { %>
